# adm-mockup

./: CMakeLists.txt  README.adoc
sources/: lwm2mclient.c  lwm2mclient.h  object_connectivity_moni.c  object_device.c  object_firmware.c  object_location.c  object_security.c  object_server.c  object_software.c  system_api.c
sources/scripts/: manage_package.sh
sources/shared/: commandline.c  commandline.h  object_common.h  platform.c
